unpackaged/main/default/objects/Contact/fields/Background_Notes__c.field-meta.xml
<CustomField>
    <fullName>Background_Notes__c</fullName>
    <label>Background Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>