unpackaged/main/default/objects/Contact/fields/CD_Account__c.field-meta.xml
<CustomField>
    <fullName>CD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CD Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CD Contact</relationshipLabel>
    <relationshipName>CD_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>