unpackaged/main/default/objects/Contact/fields/CM_Account__c.field-meta.xml
<CustomField>
    <fullName>CM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CM Contact</relationshipLabel>
    <relationshipName>CM_Account</relationshipName>
    <type>Lookup</type>
</CustomField>