unpackaged/main/default/objects/Contact/fields/CONTACT_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_CATEGORY__c</fullName>
    <label>CONTACT CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF-CSG</fullName>
            </value>
            <value>
                <fullName>SF-SALES</fullName>
            </value>
            <value>
                <fullName>SF-PRESALES</fullName>
            </value>
            <value>
                <fullName>ORCL-OCS</fullName>
            </value>
            <value>
                <fullName>ORCL-SALES</fullName>
            </value>
            <value>
                <fullName>ORCL-PRESALES</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>