unpackaged/main/default/objects/Contact/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <label>Contact City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>