unpackaged/main/default/objects/Contact/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <label>Contact Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>