unpackaged/main/default/objects/Contact/fields/Contact_Region__c.field-meta.xml
<CustomField>
    <fullName>Contact_Region__c</fullName>
    <label>Contact Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>