unpackaged/main/default/objects/Contact/fields/Contact_Test__c.field-meta.xml
<CustomField>
    <fullName>Contact_Test__c</fullName>
    <label>Contact Test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>