unpackaged/main/default/objects/Contact/fields/Contact_Test_One__c.field-meta.xml
<CustomField>
    <fullName>Contact_Test_One__c</fullName>
    <label>Contact Test One</label>
    <length>50</length>
    <type>Text</type>
</CustomField>