unpackaged/main/default/objects/Contact/fields/CRMIT_s_Contact__c.field-meta.xml
<CustomField>
    <fullName>CRMIT_s_Contact__c</fullName>
    <label>CRMIT&#39;s Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>