unpackaged/main/default/objects/Contact/fields/FSPSalesAuto__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>FSPSalesAuto__Image_URL__c</fullName>
    <label>Image URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>