unpackaged/main/default/objects/Contact/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Relationship</fullName>
                <default>true</default>
                <label>No Relationship</label>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>