unpackaged/main/default/objects/Contact/fields/Suggested_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action_Plan__c</fullName>
    <label>Suggested Action Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>