unpackaged/main/default/objects/Contact/recordTypes/ANZ_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>ANZ_Record_Type</fullName>
    <active>true</active>
    <label>ANZ Record Type</label>
</RecordType>