unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>Contact_Region__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Contact_City__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Linkedin__c</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>