unpackaged/main/default/objects/Contact/listViews/Tim_s_Contacts.listView-meta.xml
<ListView>
    <fullName>Tim_s_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Tim</value>
    </filters>
    <label>Tim&#39;s Contacts</label>
</ListView>